# firecracker

./: .dockerignore  .git-blame-ignore-revs  .gitignore  .gitlint  .mailmap  .mdformat.toml  .mdlrc  CHANGELOG.md  CHARTER.md  CODE-OF-CONDUCT.md  CODE_OF_CONDUCT.md  CONTRIBUTE.md  CONTRIBUTING.md  CREDITS.md  Cargo.toml  DEPRECATED.md  FAQ.md  Hydrunfile  LICENSE  MAINTAINERS.md  NOTICE  PGP-KEY.asc  README.md  SECURITY-POLICY.md  SECURITY.md  SEQPACKET_IMPLEMENTATION.md  SEQPACKET_USAGE_GUIDE.md  SPECIFICATION.md  THIRD-PARTY  build.rs  clippy.in  config_vm  deny.toml  flake.nix  get_rootfs_guest_kernel.sh  memo  pre-commit  quickstart.md  rootfs.ext4  run_firecracker.sh  (+7 more)
api/: .gitignore  Cargo.toml  README.md  actions.yaml  devices.yaml  firecracker-mvp.yaml
api/.cargo/: config
api/.swagger-codegen/: VERSION
api/api/: swagger.yaml
api/examples/: ca.pem  client.rs  server-chain.pem  server-key.pem  server.rs
api/examples/server_lib/: mod.rs
api/src/: client.rs  lib.rs  mimetypes.rs  models.rs  server.rs
api/swagger/: all.yaml  devices.yaml  firecracker-beta.yaml  firecracker-mvp.yaml  firecracker-v0.1.yaml  firecracker-v1.0.yaml  limiters.yaml
api_server/: Cargo.toml
api_server/src/: http_service.rs  lib.rs  parsed_request.rs  request.rs
api_server/src/request/: actions.rs  balloon.rs  boot_source.rs  drive.rs  instance_info.rs  logger.rs  machine_configuration.rs  mmds.rs  mod.rs  net.rs  vsock.rs  vtfs.rs
api_server/swagger/: firecracker-beta.yaml  firecracker-experimental.yaml  firecracker.yaml
arch/: Cargo.toml
arch/src/: aarch64.rs  lib.rs  x86_64.rs
arch/src/aarch64/: fdt.rs  gic.rs  gicv3.rs  layout.rs  mod.rs  output.dtb  regs.rs
arch/src/x86_64/: gdt.rs  interrupts.rs  layout.rs  mod.rs  mptable.rs  regs.rs
devices/: Cargo.toml
devices/src/: bus.rs  i8042.rs  lib.rs  serial.rs  virtio.rs
devices/src/legacy/: i8042.rs  mod.rs  rtc_pl031.rs  serial.rs
devices/src/virtio/: balloon.rs  block.rs  mmio.rs  mod.rs  net.rs  queue.rs  vhost.rs
dumbo/: Cargo.toml
dumbo/src/: lib.rs  ns.rs  tcp.rs
dumbo/src/pdu/: arp.rs  bytes.rs  ethernet.rs  ipv4.rs  mod.rs  tcp.rs  udp.rs
dumbo/src/tcp/: connection.rs  endpoint.rs  handler.rs  mod.rs
firecracker/: Cargo.toml  build.rs
firecracker/benches/: snapshot.rs  vmm.rs
firecracker/src/: api_server_adapter.rs  lib.rs  main.rs  metrics.rs  vm_memory_ext.rs
firecracker/src/api_server/: mod.rs  parsed_request.rs
firecracker/src/arch/: mod.rs
firecracker/src/cpuid/: bit_helper.rs  brand_string.rs  common.rs  cpu_leaf.rs  mod.rs
firecracker/src/devices/: bus.rs  mod.rs
firecracker/src/dumbo/: mod.rs
firecracker/src/io_uring/: bindings.rs  mod.rs  probe.rs  restriction.rs
firecracker/src/logger/: init.rs  logger.rs  metrics.rs  mod.rs
firecracker/src/mmds/: data_store.rs  mod.rs  ns.rs  persist.rs  token.rs  token_headers.rs
firecracker/src/rate_limiter/: mod.rs  persist.rs
firecracker/src/snapshot/: mod.rs
firecracker/src/virtio_gen/: virtio_ring.rs
firecracker/src/vmm/: builder.rs  memory_snapshot.rs  mod.rs  persist.rs  resources.rs  rpc_interface.rs  signal_handler.rs  version_map.rs
jailer/: Cargo.toml  build.rs
jailer/src/: cgroup.rs  chroot.rs  env.rs  lib.rs  main.rs  resource_limits.rs  uuid.rs
kvm/: Cargo.toml
kvm/src/: cap.rs  ioctl_defs.rs  lib.rs
kvm/tests/: real_run_adder.rs
logger/: Cargo.toml
logger/src/: error.rs  lib.rs  metrics.rs  metrics2.rs  writers.rs
net_util/: Cargo.toml
net_util/src/: lib.rs  mac.rs  tap.rs
rate_limiter/: Cargo.toml
rate_limiter/src/: lib.rs
src/acpi/: Cargo.toml
src/acpi-tables/: Cargo.toml
src/acpi-tables/src/: aml.rs  dsdt.rs  fadt.rs  lib.rs  madt.rs  mcfg.rs  rsdp.rs  xsdt.rs
src/acpi/src/: aml.rs  dsdt.rs  fadt.rs  lib.rs  madt.rs  rsdp.rs  sdt.rs  xsdt.rs
src/api_server/: Cargo.toml
src/api_server/src/: lib.rs  parsed_request.rs
src/api_server/swagger/: firecracker.yaml
src/api_server/tests/: api_server_integration_tests.rs
src/arch/: Cargo.toml
src/arch/src/: lib.rs
src/bit-fields/: Cargo.toml
src/bit-fields-macros/: Cargo.toml
src/bit-fields-macros/src/: builder.rs  lib.rs  parser.rs  utils.rs
src/bit-fields/src/: bit.rs  bit_range.rs  errors.rs  example.rs  lib.rs
src/clippy-tracing/: Cargo.toml  README.md
src/clippy-tracing/src/: main.rs
src/clippy-tracing/tests/: integration_tests.rs
src/cpu-template-helper/: Cargo.toml  build.rs
src/cpu-template-helper/src/: dump.rs  main.rs  utils.rs
src/cpuid/: Cargo.toml  build.rs
src/cpuid/benches/: benchmark.rs
src/cpuid/src/: bit_helper.rs  brand_string.rs  common.rs  cpu_config.rs  cpu_leaf.rs  cpuid_ffi.rs  indexing.rs  leaves.rs  lib.rs  normalize.rs  registers.rs  supports.rs  t2s.rs
src/devices/: Cargo.toml
src/devices/src/: bus.rs  lib.rs
src/devices/tests/: integration_tests.rs
src/dumbo/: Cargo.toml
src/dumbo/src/: lib.rs  mac.rs  ns.rs  persist.rs
src/firecracker/: Cargo.toml  build.rs
src/firecracker/examples/: README.md
src/firecracker/src/: api_server_adapter.rs  lib.rs  main.rs  metrics.rs  seccomp.rs
src/firecracker/swagger/: firecracker.yaml
src/firecracker/tests/: test_api_server.rs  test_cmd_line_start.rs  test_cpu_templates_api.rs  test_uffd.rs  verify_dependencies.rs
src/gdb_server/: Cargo.toml
src/gdb_server/src/: lib.rs  target.rs  util.rs  walker.rs
src/guest_config/: Cargo.toml
src/guest_config/src/: guest_config_compiler_bin.rs  lib.rs
src/guest_config/tests/: library_test.rs
src/io_uring/: Cargo.toml
src/io_uring/src/: bindings.rs  lib.rs  probe.rs  restriction.rs
src/io_uring/tests/: integration_tests.rs
src/jailer/: Cargo.toml
vmm/: Cargo.toml
vmm/src/: api_logger_config.rs  default_syscalls.rs  device_config.rs  device_manager.rs  error.rs  kernel_cmdline.rs  lib.rs  logger_config.rs  machine.rs  signal_handler.rs  sigsys_handler.rs  vm_control.rs  vmm_config.rs  vstate.rs
x86_64/: Cargo.toml  build.rs
x86_64/src/: bootparam.rs  cpuid.rs  gdt.rs  interrupts.rs  layout.rs  lib.rs  mpspec.rs  mptable.rs  msr_index.rs  regs.rs
(+2807 files in other folders)
