[package]
name = "firecracker_api"
version = "0.1.0"
authors = ["acatan@amazon.com"]

[features]
default = ["client", "server"]
client = ["serde_json", "serde_ignored", "hyper", "hyper-openssl", "uuid"]
server = ["serde_json", "serde_ignored", "hyper", "iron", "router", "bodyparser", "urlencoded", "uuid"]

[dependencies]
bodyparser = {version = "0.7", optional = true}
chrono = { version = "0.4", features = ["serde"] }
futures = "0.1"
hyper = {version = "0.10", optional = true}
hyper-openssl = {version = "0.2", optional = true }
iron = {version = "0.5", optional = true}
lazy_static = "0.2"
log = "0.3.0"
multipart = {version = "0.13", optional = true}
router = {version = "0.5", optional = true}
serde = "1.0"
serde_derive = "1.0"
serde_ignored = {version = "0.0.4", optional = true}
serde_json = {version = "1.0", optional = true}
swagger = "0.7"
urlencoded = {version = "0.5", optional = true}
uuid = {version = "0.5", optional = true, features = ["serde", "v4"]}
# ToDo: this should be updated to point at the official crate once
# https://github.com/RReverser/serde-xml-rs/pull/45 is accepted upstream


[dev-dependencies]
clap = "2.25"
