[package]
name = "api_server"
version = "0.1.0"
authors = ["Amazon firecracker team <firecracker-devel@amazon.com>"]

[dependencies]
chrono = ">=0.4"
futures = "=0.1.18"
hyper = "=0.11.16"
serde = "=1.0.27"
serde_derive = "=1.0.27"
serde_json = ">=1.0.9"
tokio-core = "=0.1.12"
tokio-uds = "=0.1.7"
tokio-io = "=0.1.5"

fc_util = { path = "../fc_util" }
logger = { path = "../logger" }
mmds = { path = "../mmds" }
sys_util = { path = "../sys_util" }
vmm = { path = "../vmm" }

[dev-dependencies]
arch = { path = "../arch" }
devices = { path = "../devices" }
kernel = { path = "../kernel" }
memory_model = { path = "../memory_model" }
net_util = { path = "../net_util" }
rate_limiter = { path = "../rate_limiter" }

[features]
vsock = ["vmm/vsock"]
