[package]
name = "api_server"
version = "0.1.0"
authors = ["Amazon firecracker team <firecracker-devel@amazon.com>"]

[dependencies]
chrono = ">=0.4"
futures = "^0.1.25"
hyper = "^0.12"
serde = "=1.0.27"
serde_derive = "=1.0.27"
serde_json = ">=1.0.9"
tokio = "^0.1.13"

fc_util = { path = "../fc_util" }
logger = { path = "../logger" }
mmds = { path = "../mmds" }
sys_util = { path = "../sys_util" }
vmm = { path = "../vmm" }

[dev-dependencies]
pretty_assertions = "^0.5"
devices = { path = "../devices" }
kernel = { path = "../kernel" }
memory_model = { path = "../memory_model" }
net_util = { path = "../net_util" }
rate_limiter = { path = "../rate_limiter" }
x86_64 = { path = "../x86_64" }

[features]
vsock = ["vmm/vsock"]
