[package]
name = "arch"
version = "0.1.0"
authors = ["The Chromium OS Authors"]

[dependencies]
byteorder = "=1.2.1"
kvm-bindings = "0.1"
libc = ">=0.2.39"

arch_gen = { path = "../arch_gen" }
kvm = { path = "../kvm" }
memory_model = { path = "../memory_model" }

[dev-dependencies]
rand = ">=0.5.5"
