[package]
name = "arch"
version = "0.1.0"
authors = ["The Chromium OS Authors"]

[dependencies]
kvm-bindings = "0.1"
kvm-ioctls = "0.3"
libc = ">=0.2.39"

arch_gen = { path = "../arch_gen" }
memory_model = { path = "../memory_model" }

[dev-dependencies]
fc_util = { path = "../fc_util" }
device_tree = ">=1.1.0"
