[package]
name = "dumbo"
version = "0.1.0"
authors = ["Amazon Firecracker team <firecracker-devel@amazon.com>"]

[dependencies]
bitflags = ">=1.0.4"
byteorder = ">=1.2.1"

fc_util = { path = "../fc_util" }
logger = { path = "../logger" }
mmds = { path = "../mmds" }
net_util = { path = "../net_util" }
