[package]
name = "dumbo"
version = "0.1.0"
authors = ["Amazon Firecracker team <firecracker-devel@amazon.com>"]

[dependencies]
bitflags = ">=1.0.4"
byteorder = ">=1.2.1"
serde = ">=1.0.27"

fc_util = { path = "../fc_util" }
logger = { path = "../logger" }
mmds = { path = "../mmds" }

[dev-dependencies]
serde_json = ">=1.0.9"
