[package]
name = "jailer"
version = "0.12.0"
authors = ["Amazon Firecracker team <firecracker-devel@amazon.com>"]

[dependencies]
clap = ">=2.27.1"
libc = ">=0.2.39"
regex = ">=1.0.0"
serde = ">=1.0.27"
serde_derive = "=1.0.27"
serde_json = ">=1.0.9"

sys_util = { path = "../sys_util" }
fc_util = { path = "../fc_util" }

[dev-dependencies]
tempfile = ">=3.0.2"
