[package]
name = "kvm"
version = "0.1.0"
authors = ["The Chromium OS Authors"]

[dependencies]
byteorder = "=1.2.1"
libc = ">=0.2.39"

data_model = { path = "../data_model" }
jailer = { path = "../jailer" }
kvm_sys = { path = "../kvm_sys" }
memory_model = { path = "../memory_model" }
sys_util = { path = "../sys_util" }
