[package]
name = "logger"
version = "0.1.0"
authors = ["Amazon firecracker team <firecracker-devel@amazon.com>"]

[dependencies]
chrono = ">=0.4"
lazy_static = ">=0.2"
libc = ">=0.2.39"
log = { version = "0.4", features = ["std"] }
serde = ">=1.0.27"
serde_derive = ">=1.0.27"
serde_json = ">=1.0.9"
time = "0.1.34"
