[package]
name = "net_util"
version = "0.1.0"
authors = ["The Chromium OS Authors"]

[dependencies]
libc = ">=0.2.39"
serde = "=1.0.27"

data_model = { path = "../data_model" }
jailer = { path = "../jailer" }
net_sys = { path = "../net_sys" }
sys_util = { path = "../sys_util" }

[dev-dependencies]
lazy_static = "=1.0.0"
pnet = "=0.21.0"
serde_json = ">=1.0.9"
