[package]
name = "vmm"
version = "0.1.0"
authors = ["Amazon firecracker team <firecracker-devel@amazon.com>"]

[dependencies]
libc = ">=0.2.39"
epoll = "=2.1.0"
scopeguard = "=0.3.3"
serde = "=1.0.27"
serde_json = ">=1.0.9"
timerfd = ">=1.0"

api_server = { path = "../api_server" }
data_model = { path = "../data_model" }
devices = { path = "../devices" }
kernel_loader = { path = "../kernel_loader" }
kvm = { path = "../kvm" }
kvm_sys = { path = "../kvm_sys" }
logger = { path = "../logger" }
net_util = { path = "../net_util"}
sys_util = { path = "../sys_util" }
x86_64 = { path = "../x86_64" }

[dev-dependencies]
tempfile = ">=3.0.2"
