[package]
name = "vmm"
version = "0.1.0"
authors = ["Amazon firecracker team <firecracker-devel@amazon.com>"]

[dependencies]
libc = ">=0.2.39"
epoll = "=2.1.0"
futures = ">=0.1.18"
serde = ">=1.0.27"
serde_derive = ">=1.0.27"
serde_json = ">=1.0.9"
time = ">=0.1.39"
timerfd = ">=1.0"

data_model = { path = "../data_model" }
devices = { path = "../devices" }
kernel = { path = "../kernel" }
kvm = { path = "../kvm" }
logger = { path = "../logger" }
memory_model = { path = "../memory_model" }
net_util = { path = "../net_util"}
seccomp = { path = "../seccomp" }
sys_util = { path = "../sys_util" }
x86_64 = { path = "../x86_64" }

[dev-dependencies]
tempfile = ">=3.0.2"
