[package]
name = "vmm"
version = "0.1.0"
authors = ["Amazon Firecracker team <firecracker-devel@amazon.com>"]

[dependencies]
chrono = ">=0.4"
kvm-bindings = "0.1"
kvm-ioctls = "0.2"
libc = ">=0.2.39"
epoll = "=4.0.1"
futures = ">=0.1.18"
serde = ">=1.0.27"
serde_derive = ">=1.0.27"
serde_json = ">=1.0.9"
time = ">=0.1.39"
timerfd = ">=1.0"

arch = { path = "../arch" }
devices = { path = "../devices" }
fc_util = { path = "../fc_util" }
kernel = { path = "../kernel" }
logger = { path = "../logger" }
memory_model = { path = "../memory_model" }
mmds = { path = "../mmds" }
net_util = { path = "../net_util"}
rate_limiter = { path = "../rate_limiter" }
seccomp = { path = "../seccomp" }
sys_util = { path = "../sys_util" }

[target.'cfg(target_arch = "x86_64")'.dependencies]
cpuid = { path = "../cpuid" }

[dev-dependencies]
tempfile = ">=3.0.2"

[features]
vsock = ["devices/vsock"]

