[package]
name = "x86_64"
version = "0.1.0"
authors = ["The Chromium OS Authors"]

[dependencies]
byteorder = "=1.2.1"
kvm_wrapper = ">=0.1.0"
libc = ">=0.2.39"

kvm = { path = "../kvm" }
memory_model = { path = "../memory_model" }
sys_util = { path = "../sys_util" }

[dev-dependencies]
rand = ">=0.5.5"
