[package]
name = "acpi_tables"
version = "0.1.0"
authors = ["The Cloud Hypervisor Authors", "Amazon Firecracker team <firecracker-devel@amazon.com>"]
edition = "2021"
license = "Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
displaydoc = "0.2.5"
thiserror = "1.0.63"
vm-memory = { version = "0.14.1", features = ["backend-mmap", "backend-bitmap"] }
zerocopy = { version = "0.7.35", features = ["derive"] }

[lib]
bench = false

[lints]
workspace = true
