[package]
name = "acpi"
version = "0.1.0"
authors = ["Amazon Firecracker team <firecracker-devel@amazon.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vm-memory = { path = "../vm-memory" }
arch = { path = "../arch" }
logger = { path = "../logger" }
