[package]
name = "acpi"
version = "0.1.0"
authors = ["Amazon Firecracker team <firecracker-devel@amazon.com>"]
edition = "2018"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.32"

vm-memory = { path = "../vm-memory" }
arch = { path = "../arch" }
logger = { path = "../logger" }
