[package]
name = "api_server"
version = "0.1.0"
authors = ["Amazon Firecracker team <firecracker-devel@amazon.com>"]
edition = "2021"
license = "Apache-2.0"

[lib]
bench = false

[dependencies]
libc = "0.2.117"
serde = { version = "1.0.136", features = ["derive"] }
serde_derive = "1.0.136"
serde_json = "1.0.78"
thiserror = "1.0.32"
hyper = "0.14.27"
hyperlocal = "0.8.0"
log = "0.4.19"
http = "0.2.9"
tokio = "1.29.0"

logger = { path = "../logger" }
mmds = { path = "../mmds" }
seccompiler = { path = "../seccompiler" }
utils = { path = "../utils" }
vmm = { path = "../vmm" }

[dev-dependencies]
libc = "0.2.117"
