[package]
name = "arch"
version = "0.1.0"
authors = ["The Chromium OS Authors"]
edition = "2018"
license = "Apache-2.0"

[dependencies]
kvm-bindings = { version = ">=0.5.0", features = ["fam-wrappers"] }
kvm-ioctls = ">=0.9.0"
libc = ">=0.2.39"
linux-loader = ">=0.4.0"
versionize = ">=0.1.6"
versionize_derive = ">=0.1.3"
vm-fdt = "0.1.0"

arch_gen = { path = "../arch_gen" }
logger = { path = "../logger" }
utils = { path = "../utils" }
vm-memory = { path = "../vm-memory" }

[dev-dependencies]
device_tree = ">=1.1.0"
