[package]
name = "arch"
version = "0.1.0"
authors = ["The Chromium OS Authors"]
edition = "2021"
license = "Apache-2.0"

[dependencies]
bitflags = "1.3.2"
derive_more = { version = "0.99.17", default-features = false, features = ["from"] }
kvm-bindings = { version = "0.6.0", features = ["fam-wrappers"] }
kvm-ioctls = "0.12.0"
libc = "0.2.117"
linux-loader = "0.8.1"
versionize = "0.1.6"
versionize_derive = "0.1.4"
vm-fdt = "0.2.0"
thiserror = "1.0.32"

arch_gen = { path = "../arch_gen" }
logger = { path = "../logger" }
utils = { path = "../utils" }
vm-memory = { path = "../vm-memory" }

[dev-dependencies]
device_tree = "1.1.0"
