[package]
name = "clippy-tracing"
version = "0.1.0"
authors = ["Amazon Firecracker team <firecracker-devel@amazon.com>"]
edition = "2021"
license = "Apache-2.0"

[[bin]]
name = "clippy-tracing"
bench = false

[dependencies]
clap = { version = "4.5.17", features = ["derive"] }
itertools = "0.13.0"
proc-macro2 = { version = "1.0.86", features = ["span-locations"] }
quote = "1.0.37"
syn = { version = "2.0.77", features = ["full", "extra-traits", "visit", "visit-mut", "printing"] } 
walkdir = "2.5.0"

[dev-dependencies]
uuid = { version = "1.10.0", features = ["v4"] }

[lints]
workspace = true
