[package]
name = "clippy-tracing"
version = "0.1.0"
authors = ["Amazon Firecracker team <firecracker-devel@amazon.com>"]
edition = "2024"
license = "Apache-2.0"

[[bin]]
name = "clippy-tracing"
bench = false

[dependencies]
clap = { version = "4.5.38", features = ["derive"] }
itertools = "0.14.0"
proc-macro2 = { version = "1.0.95", features = ["span-locations"] }
quote = "1.0.40"
syn = { version = "2.0.101", features = ["full", "extra-traits", "visit", "visit-mut", "printing"] } 
walkdir = "2.5.0"

[dev-dependencies]
uuid = { version = "1.17.0", features = ["v4"] }

[lints]
workspace = true
