[package]
name = "clippy-tracing"
version = "0.1.0"
authors = ["Amazon Firecracker team <firecracker-devel@amazon.com>"]
edition = "2024"
license = "Apache-2.0"

[[bin]]
name = "clippy-tracing"
bench = false

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
itertools = "0.15.0"
proc-macro2 = { version = "1.0.106", features = ["span-locations"] }
quote = "1.0.45"
syn = { version = "3.0.2", features = ["full", "extra-traits", "visit", "visit-mut", "printing"] } 
walkdir = "2.5.0"

[dev-dependencies]
uuid = { version = "1.23.2", features = ["v4"] }

[lints]
workspace = true
