[package]
name = "cpu-template-helper"
version = "1.13.0-dev"
authors = ["Amazon Firecracker team <firecracker-devel@amazon.com>"]
edition = "2024"
license = "Apache-2.0"

[[bin]]
name = "cpu-template-helper"
bench = false

[features]
tracing = ["log-instrument", "vmm/tracing"]

[dependencies]
clap = { version = "4.5.40", features = ["derive", "string"] }
displaydoc = "0.2.5"
libc = "0.2.173"
log-instrument = { path = "../log-instrument", optional = true }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"

vmm = { path = "../vmm" }
vmm-sys-util = "0.14.0"

[lints]
workspace = true
