[package]
name = "devices"
version = "0.1.0"
authors = ["The Chromium OS Authors"]
edition = "2021"
license = "Apache-2.0"

[dependencies]
event-manager = "0.3.0"
libc = "0.2.117"
timerfd = "1.2.0"
versionize = "0.1.6"
versionize_derive = "0.1.4"
vm-superio = "0.7.0"
derive_more = { version = "0.99.17", default-features = false, features = ["from"] }

dumbo = { path = "../dumbo" }
logger = { path = "../logger" }
mmds = { path = "../mmds" }
net_gen = { path = "../net_gen" }
rate_limiter = { path = "../rate_limiter" }
serde = { version = "1.0.136", features = ["derive"] }
snapshot = { path = "../snapshot" }
utils = { path = "../utils" }
virtio_gen = { path = "../virtio_gen" }
vm-memory = { path = "../vm-memory" }
io_uring = { path = "../io_uring" }

[dev-dependencies]
proptest = { version = "1.0.0", default-features = false, features = ["std"] }
